--- a/index.html
+++ b/index.html
@@ -288,8 +288,8 @@
                                 </div>
 
                                 <div class="modal-footer">
-                                    <button type="button" class="btn btn-primary" id="enviarCarro">Enviar</button>
                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+                                    <button type="button" class="btn btn-primary" id="enviarCarro">Enviar</button>
                                 </div>
                                 <!-- Rodapé do Modal -->
 
@@ -323,11 +323,11 @@
                 <h2 class="mb-3">Clientes</h2>
                 <div class="d-flex justify-content-between">
                     <form class="form-inline">
-                        <input class="form-control mr-sm-2" type="text" id="searchInput" placeholder="Pesquisar">
+                        <input class="form-control mr-sm-2" type="text" id="barraDeBusca" placeholder="Pesquisar">
                     </form>
                     <button type="button" class="btn btn-primary btnMoldal" data-toggle="modal"
                         data-target="#moldalClientes">
-                        Cadastrar Carro
+                        Cadastrar Cliente
                     </button>
                     <!-- Modal -->
                     <div class="modal fade" id="moldalClientes">
@@ -358,8 +358,8 @@
                                     </form>
                                 </div>
                                 <div class="modal-footer">
-                                    <button type="button" class="btn btn-primary" id="enviarCliente">Enviar</button>
                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+                                    <button type="button" class="btn btn-primary" id="enviarCliente">Enviar</button>
                                 </div>
                             </div>
                         </div>
