updat barra de busca reserva

--- a/index.html
+++ b/index.html
@@ -73,14 +73,16 @@
                     </div>
                 </div>
                 <div class="ultimasReservas">
-                    <h2>Ultimas reservas</h2>
+                    <h2>Todas as Reservas</h2>
+                    <input class="form-control mr-sm-2" type="text" id="barraDeBuscaReserva"
+                            placeholder="Pesquisar">
                     <table class="table" id="tabelaReservas">
                         <thead>
                             <tr>
                                 <th scope="col">Nome</th>
                                 <th scope="col">Sobrenome</th>
                                 <th scope="col">CNH</th>
-                                <th scope="col">Possui Reserva?</th>
+                                <th scope="col" style="display: none;">Possui Reserva?</th>
                                 <th scope="col">Carro</th>
                                 <th scope="col">Placa</th>
                                 <th scope="col">Valor da resrva</th>
